# transpiler

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  core.binarypb  core.dm  core.dme  coregen.go  global.go  main.go  paths.go  transpiler.go
.github/workflows/: main.yml
bazel/: BUILD.bazel  bazel_transpiler.go
parser/: BUILD.bazel  parser.go  proc.go  type.go  var.go
templates/: transformer_declaration.h.tmpl  transformer_definition.cc.tmpl  type_registrar.cc.tmpl  type_registrar.h.tmpl
transformer/: BUILD.bazel  constant.go  coregen.go  declaration_file.go  definition_file.go  expression.go  helpers.go  op_conversions.go  predicates.go  prefab.go  proc_calls.go  registrar.go  scope.go  statement.go  term.go  transformer.go  transformer_test.go
writer/: BUILD.bazel  declaration.go  expression.go  helpers.go  member.go  registrar.go  statement.go  templates.go  writer.go
