load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "transpiler",
    srcs = [
        "bazel_transpiler.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:ast_go_proto",
        "//:paths",
        "//parser",
        "//transformer",
        "//writer",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
