# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["@donk_transpiler//:pkg"])

go_library(
    name = "parser",
    srcs = [
        "parser.go",
        "proc.go",
        "type.go",
        "var.go",
    ],
    importpath = "snowfrost.garden/donk/transpiler/parser",
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@donk_transpiler//:ast_go_proto",
        "@donk_transpiler//:paths",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
