# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["@donk_transpiler//:pkg"])

go_library(
    name = "scope",
    srcs = ["scope.go"],
    importpath = "snowfrost.garden/donk/transpiler/scope",
    deps = [
        "@donk_transpiler//:paths",
        "@donk_transpiler//parser",
        "@vasker//:cc_grammar_go_proto",
    ],
)

go_library(
    name = "transformer",
    srcs = [
        "constant.go",
        "coregen.go",
        "declaration_file.go",
        "definition_file.go",
        "expression.go",
        "helpers.go",
        "op_conversions.go",
        "predicates.go",
        "prefab.go",
        "proc_calls.go",
        "registrar.go",
        "statement.go",
        "term.go",
        "transformer.go",
    ],
    importpath = "snowfrost.garden/donk/transpiler/transformer",
    deps = [
        ":scope",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@donk_transpiler//:ast_go_proto",
        "@donk_transpiler//:paths",
        "@donk_transpiler//parser",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
        "@vasker",
        "@vasker//:cc_grammar_go_proto",
    ],
)
